tests/ui/endpoint/non_custom_params_attribute.stderr
error: `params` can only be used on custom endpoints
 --> tests/ui/endpoint/non_custom_params_attribute.rs:8:12
  |
8 | #[read_all(params = true)]
  |            ^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/non_custom_params_attribute.rs:4:10
  |
4 | #[derive(Resource)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Resource` (in Nightly builds, run with -Z macro-backtrace for more info)
