tests/ui/endpoint/non_custom_params_attribute.rs
#[macro_use]
extern crate gotham_restful;

#[derive(Resource)]
#[resource(read_all)]
struct FooResource;

#[read_all(params = true)]
async fn read_all() {}

fn main() {}
